# --------------------------------------------------------------------------------------
# Copyright (c) 2015-2022, Exopy Authors, see AUTHORS for more details.
#
# Distributed under the terms of the Modified BSD License.
#
# The full license is in the file LICENSE, distributed with this software.
# --------------------------------------------------------------------------------------

[project]
name = "exopy"
description = "Experiment control application"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Matthieu Dartiailh", email = "m.dartiailh@gmail.com"}
]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic=["version"]


[project.urls]
homepage = "http://github.com/exopy/exopy"
documentation = "https://exopy.readthedocs.io/en/latest/"
repository = "http://github.com/exopy/exopy"
changelog = "http://github.com/exopy/exopy/blob/main/CHANGES"


[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools_scm]
write_to = "exopy/version.py"
write_to_template = """
# --------------------------------------------------------------------------------------
# Copyright (c) 2015-2022, Exopy authors.
#
# Distributed under the terms of the Modified BSD License.
#
# The full license is in the file LICENSE, distributed with this software.
# --------------------------------------------------------------------------------------
# This file is auto-generated by setuptools-scm do NOT edit it.

from collections import namedtuple

#: A namedtuple of the version info for the current release.
_version_info = namedtuple("_version_info", "major minor micro status")

parts = "{version}".split(".", 3)
version_info = _version_info(
    int(parts[0]),
    int(parts[1]),
    int(parts[2]),
    parts[3] if len(parts) == 4 else "",
)

# Remove everything but the 'version_info' from this module.
del namedtuple, _version_info, parts

__version__ = "{version}"
"""
